[package]
name = "tokio-fd-leak"
version = "0.1.0"
authors = ["MOZGIII <mike-n@narod.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio-compat = { version = "0.1", features = ["rt-full"], path = "../tokio-compat" }
futures01 = { version = "0.1", package = "futures" }
tokio01 = { version = "0.1", package = "tokio" }
tokio02 = { version = "0.2", package = "tokio" }
